--- a/package.json
+++ b/package.json
@@ -1,24 +1,22 @@
 {
-  "name": "actua-pwa",
-  "version": "0.0.1",
+  "name": "actua",
+  "version": "1.0.0",
+  "description": "Herramienta digital interactiva para niños con autismo",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview",
-    "deploy": "gh-pages -d dist"
+    "preview": "vite preview"
   },
   "dependencies": {
-    "@emotion/react": "^11.14.0",
-    "@emotion/styled": "^11.14.0",
-    "@mui/icons-material": "^7.1.0",
-    "@mui/material": "^7.1.0",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.14.11",
+    "@mui/material": "^5.14.15",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@vitejs/plugin-react": "^4.4.1",
-    "gh-pages": "^6.3.0",
-    "vite": "^6.3.5",
-    "vite-plugin-pwa": "^1.0.0"
+    "@vitejs/plugin-react": "^4.1.0",
+    "vite": "^4.5.0"
   }
 }
