--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy":   "gh-pages -d build"
   },
   "dependencies": {
     "@emotion/react": "^11.14.0",
@@ -16,6 +18,8 @@
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.1.0",
+    "gh-pages": "^6.3.0",
     "vite": "^4.5.0"
-  }
+  },
+  "homepage": "https://github.com/Nicole5TEA/actum.git"
 }
