--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "build": "vite build",
     "preview": "vite preview",
     "predeploy": "npm run build",
-    "deploy":   "gh-pages -d build"
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "@emotion/react": "^11.14.0",
@@ -21,5 +21,5 @@
     "gh-pages": "^6.3.0",
     "vite": "^4.5.0"
   },
-  "homepage": "https://github.com/Nicole5TEA/actum.git"
+  "homepage": "https://Nicole5TEA.github.io/actum"
 }
