Fix todo redireccionaba a index.html y correccio crear alumno

--- a/public/staticwebapp.config.json
+++ b/public/staticwebapp.config.json
@@ -1,10 +1,6 @@
 {
-    "routes": [
-      {
-        "route": "/*",
-        "serve": "/index.html",
-        "statusCode": 200
-      }
-    ]
-  }
-  
+  "routes": [
+    { "route": "/api/*", "allowedRoles": ["anonymous"] },
+    { "route": "/*",     "serve": "/index.html", "statusCode": 200 }
+  ]
+}
