--- a/api/package.json
+++ b/api/package.json
@@ -3,7 +3,9 @@
     "version": "1.0.0",
     "private": true,
     "dependencies": {
-      "@azure/cosmos": "^3.x",
-      "@azure/functions": "^3.x"
+        "@azure/cosmos": "^3.17.3",
+        "@azure/functions": "^3.x",
+        "bcryptjs": "^3.0.2",
+        "jsonwebtoken": "^9.0.2"
     }
-  }  
+}
